[package]
name = "my-pandoc-filters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pandoc_ast = "0.8.5"
pandoc = { git = "https://github.com/rloic/pandoc", branch = "pandoc/1.23" }
itertools = "0.11.0"
